@@ -102,6 +102,7 @@ typedef struct
   uint32           major,minor;              // special type major/minor number
   uint64           id;                       // unique id (e. g. inode number)
   bool             mounted;                  // TRUE iff device is currently mounted
+  bool             removable;                // TRUE iff device is removable
 } DeviceInfo;
 
 /***************************** Variables *******************************/
@@ -360,7 +361,8 @@ bool Device_endOfDeviceList(DeviceListHandle *deviceListHandle);
 *          deviceName       - device name variable
 *          deviceInfo       - device info variable (can be NULL)
 * Output : deviceName - next device name
-*          deviceInfo - next device info
+*          deviceInfo - next device info (partially for removable
+*                       devices)
 * Return : ERROR_NONE or error code
 * Notes  : -
 \***********************************************************************/
@@ -390,7 +392,7 @@ bool Device_existsCString(const char *deviceName);
 * Input  : deviceInfo - device info variable to fill
 *          deviceName - device name
 *          sizesFlag  - TRUE to detect block size+device size
-* Output : deviceInfo - device info
+* Output : deviceInfo - device info (partially for removable devices)
 * Return : ERROR_NONE or error code
 * Notes  : only in debug version: if environment variable
 *          DEBUG_EMULATE_BLOCK_DEVICE is set to a file name a device of
